# options-put-call-reporter

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: options-reporter.instructions.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
assistant-pack/: README.md
assistant-pack/claude/options-put-call-reporter/: SKILL.md
assistant-pack/prompts/: options-report-agent.md
config/: symbols.json
docs/: ARCHITECTURE.md  EMAIL.md  MAINTENANCE.md  OUTPUTS.md  PUBLISHING.md  SETUP.md
docs/superpowers/plans/: 2026-06-02-daily-options-put-call-report.md  2026-06-05-concise-run-progress.md  2026-06-06-dependabot-auto-merge.md  2026-06-06-documentation-refresh.md  2026-06-06-github-publishing-agent-distribution.md  2026-06-06-owner-auto-merge.md  2026-06-06-yfin-fallback-data-source.md
docs/superpowers/specs/: 2026-06-02-daily-options-put-call-report-design.md  2026-06-05-concise-run-progress-design.md  2026-06-05-github-publishing-agent-distribution-design.md  2026-06-06-documentation-refresh-design.md  2026-06-06-owner-auto-merge-design.md  2026-06-06-yfin-fallback-data-source-design.md
scripts/: install_launch_agent.sh  run_daily.sh  setup_local.py
src/reporter/: analyzer.py  cli.py  collector.py  config.py  default_symbols.json  drift.py  emailer.py  history.py  keychain.py  models.py  parsing.py  reporting.py
tests/: test_analyzer.py  test_cli.py  test_collector.py  test_config.py  test_drift.py  test_history.py  test_keychain_emailer.py  test_parsing.py  test_publication_assets.py  test_reporting.py  test_scheduler_scripts.py  test_setup_local.py
tests/fixtures/: barchart_put_call_sample.html
